[package]
name = "rust-channel-bench"
version = "0.1.0"
authors = ["spacelin <spacelin@tencent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = [ "full" ]}
async-std = { version = "1.6" }
async-channel = "1.1"
crossfire = "0.1"
futures = "0.3"
bencher = "0.1.5"

[features]
default = [ "asyncstd" ]
tokio02 = []
asyncstd = []

[[bench]]
name = "bench"
path = "src/bench.rs"
harness = false
